# vm

./: SYNTAX.md  fibunacci.asm  gameOfLife.asm  main.py  projectIdeas.txt  test.asm
c++/: CMakeLists.txt  main.asm  test.asm
c++/pythonIntegrationTesting/: main.py  test.asm
c++/pythonIntegrationTesting/src/: VM.cp314-mingw_x86_64_msvcrt_gnu.pyd  vm.py
c++/src/: main.cpp
c++/src/vm/: assembler.hpp  debugger.cpp  debugger.hpp  itterators.cpp  itterators.hpp  lexer.cpp  lexer.hpp  lowerer.cpp  lowerer.hpp  parser.cpp  parser.hpp  types.cpp  types.hpp  vm.cpp  vm.hpp
c++/src/vm/assembler/: assembler.cpp  assembler.hpp  lexer.hpp  linker.cpp  linker.hpp  lowerer.cpp  lowerer.hpp  parser.cpp  parser.hpp
c++/src/vm/vm/: debugger.hpp  disk.cpp  disk.hpp  vm.cpp  vm.hpp
osBuilder/src/: bootloader.asm
osBuilder/src/fileIO/: io.asm
osBuilder/src/random/: test.asm
python/: SYNTAX.md  fibunacci.asm  gameOfLife.asm  gameOfLifeC++comp.asm  main.py  profiling_res.prof  test.asm
python/src/: debugger.py  lexer.py  lowerer.py  parser.py  screen.py  types.py  vm.py  vm_types.py
src/: debugger.py  lexer.py  parser.py  screen.py  types.py  vm.py
